cmd/team-slo-results/manifests/team-slo-results.service.yml
apiVersion: v1
kind: Service
metadata:
  name: team-slo-results
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: web
  selector:
    app: team-slo-results
  type: ClusterIP
