cmd/team-slo-results/manifests/team-slo-results.route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: team-slo-results
  labels:
    app: team-slo-results
    app.kubernetes.io/component: team-slo-results
    app.kubernetes.io/instance: team-slo-results
    app.kubernetes.io/part-of: openshift-bugzilla-tools
spec:
  to:
    kind: Service
    name: team-slo-results
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
